# trt-summary

./: CMakeLists.txt  README.md
src/: engine_inspector.cpp  inspector.h  jsoncpp.cpp  logger.h  main.cpp  onnx_inspector.cpp
